--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reacttest",
-  "homepage": "https://github.com/LeonPena57/reacttest",
+  "homepage": "https://leonpena57.github.io/reacttest/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
